# jules_scheduler

./: .gitignore  README.md  pyproject.toml
prompts_gallery/: docs_curator.md  janitor.md
src/jules_scheduler/: cli.py  client.py  github_utils.py  prompt_files.py  repo_context.py  workflow.py
tests/: test_prompt_files.py  test_repo_context.py  test_workflow.py
